pie chart overlap fix

--- a/css/question3.css
+++ b/css/question3.css
@@ -1,15 +1,3 @@
-/****************
-Styling for 'H1'
-*****************/
-
-h2 {
-    margin: 0 auto;
-    margin-top: 10%;
-    font-size: 1.5em;
-    text-align: center;
-    color: #201F43;
-}
-
 /*****************************
 To make the background circle
 *****************************/
@@ -164,48 +152,13 @@ To make the pie slice
     height: 2.5em;
 }
 
-/*********************************
-Styling for 'Next Question' Button
-**********************************/
-
-#question {
-    text-decoration: none;
-    color: #F4F6FE;
-    background-color: #2341D8;
-    border: solid 2px #2341D8;
-    box-shadow: 0 9px #999;
-    border-radius: 15px;
-    padding: 2%;
-    width: 50%;
-    text-align: center;
-    /*position: absolute;
-    left: 50%;
-    margin-left: -150px;
-    margin-top: 700px;*/
-    display: block;
-    margin: 0 auto;
-    margin-top: 20%;
-    margin-bottom: 8%;
-}
-
-#question:hover {
-    background-color: #201F43;
-    border: solid 2px #201F43;
-}
-
-#question:active {
-    background-color: #201F43;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
-}
+/***************************
+Styling for class "relative"
+****************************/
 
 .relative {
     position: relative;
     display: block;
     margin: 0 auto;
 }
-
-
-
-
 
